syntax = "proto3";

package pubg.venus;
option go_package = "github.com/pubg/protoc-gen-venus2/pkg/protoptions";

import "google/protobuf/descriptor.proto";

// Not extendable, just define structure
message PluginOptions {
  optional bool expose_all = 1;
  string output_file_suffix = 2;
  bool pretty_output = 3;
}

message FileOptions {
  optional bool expose = 1;
  string entrypointMessage = 2;
}

message MessageOptions {
  optional bool expose = 1;
}

message FieldOptions {
  optional bool expose = 1;
  string property = 2;
  string label = 3;
  string placeholder = 4;
  State state = 5;
  repeated Message messages = 6;
  oneof Size {
    Grid grid = 7;
    int32 rem = 8;
  }

  oneof default_value {
    string default_string = 10;
    int64 default_integer = 11;
    double default_float = 12;
  }

  ComponentType component = 20;
  oneof Options {
    InputOptions input = 21;
    MultiStringOptions multi_string = 22;
    SelectOptions select = 23;
    CheckboxSetOptions checkboxSet = 24;
    TextAreaOptions text_area = 25;
    JsonEditorOptions json_editor = 26;
    RadioOptions radio = 27;
    RadioSetOptions radio_set = 28;
    ArrayOptions array = 29;
  }
}

message Message {
  State state = 1; // optional
  string text = 2; // required
}

enum State {
  unspecified = 0;
  primary = 1;
  info = 2;
  success = 3;
  warn = 4;
  idle = 5;
}

message Grid {
  optional int32 sm = 1;
  optional int32 md = 2;
  optional int32 lg = 3;
  optional int32 sm_offset = 4;
  optional int32 md_offset = 5;
  optional int32 lg_offset = 6;
  optional int32 order = 7;
}

enum ComponentType {
  Inference = 0;
  Input = 1;
  MultiString = 2;
  Select = 3;
  Checkbox = 4;
  CheckboxSet = 5;
  Switch = 6;
  DateRangePicker = 7;
  DateTimePicker = 8;
  TextArea = 9;
  JsonEditor = 10;
  Radio = 11;
  RadioSet = 12;
}

message InputOptions {
  enum Type {
    inference = 0;
    text = 1;
    number = 2;
  }
  Type type = 1;
  optional int32 min = 2;
  optional int32 max = 3;
  string regex = 4;
}

message MultiStringOptions {
  string delimeter = 1;
  optional int32 max = 2;
  bool noChips = 3;
  bool copy = 4;
}

message SelectOptions {
  VenusOptions options = 1;
  bool autocomplete = 2;
  bool multiple = 3;
  bool select_all = 4 [json_name = "select-all"];
  bool collapse_chips = 5 [json_name = "collapse-chips"];
  bool closable_chips = 6 [json_name = "closable-chips"];
  optional int32 infinite_load = 7 [json_name = "infinite-load"];
}

message CheckboxSetOptions {
  VenusOptions options = 1;
  bool column = 2;
}

message TextAreaOptions {
  optional int32 min = 1;
  optional int32 max = 2;
  string regex = 3;
}

message JsonEditorOptions {
  optional int32 height = 1;
}

message RadioOptions {
  string radio_label = 1;
  string name = 2;
}

message RadioSetOptions {
  VenusOptions options = 1;
  bool column = 2;
}

message ArrayOptions {
  optional int32 min = 1;
  optional int32 max = 2;
}

message VenusOptions {
  repeated string simple_options = 1;
  repeated LabeledOption labeled_options = 2;

  message LabeledOption {
    string label = 1;
    oneof Value {
      string string = 2;
      int64 integer = 3;
      double float = 4;
    }
  }
}

message EnumOptions {

}

message EnumValueOptions {
  oneof Value {
    string string = 1;
    int64 integer = 2;
    double float = 3;
  }
}

message OneOfOptions {
  optional bool expose = 1;
  string property = 2;
  string label = 3;
}

extend google.protobuf.FileOptions {
  FileOptions file = 11241;
}

extend google.protobuf.MessageOptions {
  MessageOptions message = 11242;
}


extend google.protobuf.FieldOptions {
  FieldOptions field = 11243;
}

extend google.protobuf.EnumOptions {
  EnumOptions enum = 11244;
}

extend google.protobuf.EnumValueOptions {
  EnumValueOptions enum_value = 11245;
}

extend google.protobuf.OneofOptions {
  OneOfOptions one_of = 11246;
}
